--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
+    "latest": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -14,9 +17,13 @@
     "cross-env": "7.0.3",
     "eslint": "8.14.0",
     "jest": "28.1.0",
+    "knex-cleaner": "^1.3.1",
+    "nodemon": "^2.0.20",
     "supertest": "6.2.3"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "knex": "^2.4.0",
     "sqlite3": "^5.0.8"
   }
